--- a/main.html
+++ b/main.html
@@ -7,6 +7,14 @@
 </head>
 
 <body>
+	<div class="container">
+
+		<h1>This is a Heading</h1>
+		
+	</div>
+
+
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
