--- a/main.html
+++ b/main.html
@@ -7,14 +7,12 @@
 </head>
 
 <body>
-	<div class="container">
+	<div class="container main">
+		
 		<ul>
-			<h1>This is a Heading</h1>
+			<h1 id="heading">This is a Heading</h1>
 		</ul>
-
 	</div>
-
-
 
 	<!-- the entire body must be written by student -->
 	<script type="text/javascript" src="./script.js">
